# vibe-x

./: CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: basic_decode.py  basic_encode.py  error_handling.py  multi_annotation.py
src/vibex/: __init__.py  exceptions.py  inline_decoder.py  inline_encoder.py  metablock.py  tokenizer.py
tests/: test_basic_flow.py  test_integration.py
